# nonebot-plugin-web-bottle

./: .pypirc  README.md  pyproject.toml  requirements.txt
data/: bottle.db
nonebot_plugin_web_bottle/: __init__.py  config.py  data_deal.py  to_msg.py  web_bottle.py
nonebot_plugin_web_bottle/templates/: comments.html  index.html
nonebot_plugin_web_bottle/templates/login/: 1.html  login.html
nonebot_plugin_web_bottle/templates/login/static/: styles.css
nonebot_plugin_web_bottle/templates/login/static/css/: backend.css
nonebot_plugin_web_bottle/templates/static/: comments_styles.css  styles.css
nonebot_plugin_web_bottle/templates/static/images/: Thumbs.db
plugins/: __init__.py  sqlite3.py  web_bottle.py
plugins/nonebot_plugin_web_bottle/: __init__.py  web_bottle.py
plugins/nonebot_plugin_web_bottle/templates/: comments.html
src/nonebot_plugin_web_bottle/: __init__.py
src/nonebot_plugin_web_bottle/templates/static/: comments_styles.css
templates/static/: comments_styles.css  styles.css
