[project]
name = "nonebot_plugin_web_bottle"
version = "0.2.1"
description = "有web的漂流瓶"
authors = [{ name = "Xican", email = "723926109@qq.com" }]
dependencies = [
    "aiofiles>=23.2.1",
    "httpx>=0.23.0",
    "nonebot-plugin-localstore>=0.7.1",
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot2[fastapi]>=2.3.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/luosheng520qaq/nonebot-plugin-web-bottle/"
repository = "https://github.com/luosheng520qaq/nonebot-plugin-web-bottle/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.6",
]
