[project]
name = "nonebot_plugin_web_bottle"
version = "0.2.1"
description = "有web的漂流瓶"
authors = [
    {name = "Xican", email = "723926109@qq.com"},
]
dependencies = [
    "nonebot2[fastapi]>=2.0.0",
    "aiofiles>=0.8.0",
    "nonebot_plugin_localstore>=0.7.0",
    "httpx>=0.23.0",
    "fastapi>=0.110.0",
    "pydantic>=1.10.11",
    "nonebot-adapter-onebot>=2.4.4"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/luosheng520qaq/nonebot-plugin-web-bottle/"
repository = "https://github.com/luosheng520qaq/nonebot-plugin-web-bottle/"

[tool.pdm]
distribution = true